Apply reviewer edits from Feb 26 PDF (Peter Meckl)
Mechanical corrections:
- Remove commas after 'where,', 'Let,', 'Steps,', 'as,'
- Hyphenate compound modifiers: reduced-order, well-conditioned,
  parameter-estimation-based, linear-in-parameters
- Fix spelling: sequential→subsequent, Adoption→Adsorption,
  modeling→modelling, estimated→estimates, value→values
- Fix phrasing: for getting→to get, which→that,
  Wald test-based detector→detector based on the Wald test
- Fix \ln operator formatting in wald_test.tex
- Fix degree symbols to use \lx{^o}{C} macro
- Fix Figure-/Table-/section- hyphens to tildes for non-breaking spaces
- Make N italic in MLE derivation

37 of 96 annotations addressed; remaining need author input.
See phm_edits_Feb26_tracker.md for full status.

--- a/secs/0-front/3-acknowledgments.tex
+++ b/secs/0-front/3-acknowledgments.tex
@@ -7,7 +7,7 @@
     grateful for the opportunity to pursue my PhD under his mentorship.
 
     I am deeply indebted to Professor Peter H. Meckl for his steadfast
-    guidance and inspiration in shaping the SCR-ASC modeling and diagnostic
+    guidance and inspiration in shaping the SCR-ASC modelling and diagnostic
     research. His support through Research Assistantships during most of my PhD
     made this work possible. I appreciate his consistent and constructive
     feedback, which was essential in developing my thesis research. I am also
@@ -28,7 +28,7 @@
     sponsorship that enabled the SCR-ASC studies. I especially thank David
     Schmidt for his detailed discussions regarding system architectures,
     testing procedures, and truck data, which significantly influenced the
-    modeling and diagnostic work. I also appreciate the support, insights, and
+    modelling and diagnostic work. I also appreciate the support, insights, and
     collaboration of Adam Kidd, Larry Brunner, Tom Nelson, and Lyle Kocher
     throughout the project. I would like to acknowledge the foundational
     contributions of Kaushal Kamal Jain, whose earlier work established
