--- a/secs/0-front/5-abstract.tex
+++ b/secs/0-front/5-abstract.tex
@@ -17,7 +17,7 @@
         parameters. The model's validity is demonstrated using the test-cell (experimental) data provided by Cummins.
 
         Based on the physical interpretation of model parameters and the hypothesis that catalyst aging reduces the
-        concentration of adsorption sites, a parameter estimation-based hypothesis-testing framework for aging detection
+        concentration of adsorption sites, a parameter-estimation-based hypothesis-testing framework for aging detection
         is proposed. The detector based on saturated model parameters demonstrated greater effectiveness and robustness
         to NOx sensor cross-sensitivity. The detector's performance is validated using both test-cell data and data from
         four long-haul trucks. Truck data, spanning a day, were collected at two different times: first, when the
