--- a/secs/1-intro/0-intro.tex
+++ b/secs/1-intro/0-intro.tex
@@ -70,7 +70,7 @@ unavailability of ammonia sensors, the unobservability of catalyst state, and NO
 
     \item Transformation of the developed model into an identifiable framework for NOx reduction dynamics. Development of a novel parameter estimation algorithm for the switched nonlinear model. Validation of the model using test-cell data.
 
-    \item Identification of parameters sensitive to aging within the nonlinear model. Development of a parameter estimation-based detector using statistical hypothesis testing for the saturated catalyst dynamic model. Validation of detector performance using both test-cell and real-world truck data.
+    \item Identification of parameters sensitive to aging within the nonlinear model. Development of a parameter-estimation-based detector using statistical hypothesis testing for the saturated catalyst dynamic model. Validation of detector performance using both test-cell and real-world truck data.
 \end{enumerate}
 
 % ============================================================
@@ -79,7 +79,7 @@ unavailability of ammonia sensors, the unobservability of catalyst state, and NO
 %===========================================================
 
 \section{Approach and Thesis Outline}
-This research conceptualizes catalyst aging detection as a parameter estimation-based hypothesis testing problem,
+This research conceptualizes catalyst aging detection as a parameter-estimation-based hypothesis testing problem,
 employing the NOx reduction dynamics of the system. This framework leads to several sub-problems, which are addressed in
 the subsequent chapters:
 \begin{enumerate}
