--- a/secs/4-NOx_mdl/1_NOx_r_mdl.tex
+++ b/secs/4-NOx_mdl/1_NOx_r_mdl.tex
@@ -44,7 +44,7 @@ directly using control volume (Figure~\ref{fig::ctrl_vol}). The model derivation
                 given sampling period, can be obtained by summing the equations from (\ref{eqn::ads_bal}) for $i = 0$ to
                 $n-1$ which is the sampling period. This results in a telescopic cancellation of the terms resulting in
                 an equation relating the moles in the current sample to the moles in the next sample
-                (section-\ref{sec::sigma_deriv}). As the ammonia desorption and ammonia oxidation have the same effect
+                (section~\ref{sec::sigma_deriv}). As the ammonia desorption and ammonia oxidation have the same effect
                 ($\sigma$ reduction) on the surface concentration of ammonia the rate constants can
                 be lumped by addition, i.e., $k_{od} = k_{oxi} + k_{des}$. We have,
                 \begin{multline}
@@ -56,7 +56,7 @@ directly using control volume (Figure~\ref{fig::ctrl_vol}). The model derivation
                         \label{eqn::ads_avg}
                 \end{multline}
         \item Finally, using (\ref{eqn::nox_avg}), $\sigma(t+t_s), \sigma(t)$ can be eliminated from
-                (\ref{eqn::ads_avg}) to get a dynamic model for $NO_x$-reduction process which explicitly depends
+                (\ref{eqn::ads_avg}) to get a dynamic model for $NO_x$-reduction process that explicitly depends
                 on the measured inputs and states alone.
                 \begin{align}
                         \text{Let }\quad \eta(k) = u_1(k-1) - x_1(k)
