--- a/secs/5-sat_detect/0-sat_detect.tex
+++ b/secs/5-sat_detect/0-sat_detect.tex
@@ -11,7 +11,7 @@ caused by the backward difference present in the regression model of the unsatur
 %===
 The above equation~(\ref{eqn::nox_mdl}) shows that the tailpipe $NO_x$ concentration becomes independent of urea dosing
 under catalyst saturation. Polynomial approximations of the Arrhenius temperature dependence of the rate constant,
-$k_{scr}$, and the concentration of viable voids, $\Gamma$ \cite{nova2014urea,ciardelli2004scr,joo2008study}, are used to obtain a linear in parameters model for the $NO_x$ process dynamics.
+$k_{scr}$, and the concentration of viable voids, $\Gamma$ \cite{nova2014urea,ciardelli2004scr,joo2008study}, are used to obtain a linear-in-parameters model for the $NO_x$ process dynamics.
 \begin{align}
     k_{scr}(T) &= A_{scr} e^{\lr{-\frac{E_{scr}}{RT}}} \approx \sum k_i T^i  \qquad i = 0, 1, \hdots
     \label{eqn::rate_const} \\
