--- a/secs/5-sat_detect/3_subs/1_cat_mode.tex
+++ b/secs/5-sat_detect/3_subs/1_cat_mode.tex
@@ -37,7 +37,7 @@ based on the variance of distribution of the prediction error for the saturated 
         \label{fig::cat_mode_det}
 \end{figure}
 The catalyst mode detection for DG RMC 1 test-cell data using FTIR measurements is shown in
-Figure-\ref{fig::cat_mode_det}. The catalyst is found to be close to saturation (or at its maximum $NO_x$ reduction)
+Figure~\ref{fig::cat_mode_det}. The catalyst is found to be close to saturation (or at its maximum $NO_x$ reduction)
 when the mass flow rate and the urea dosing rates are high, consistent with the physical understanding of the catalyst
 operation. Further, the flow rate can introduce a virtual ceiling on the maximum achievable $NO_x$ reduction due to
 reduced residence time in the catalyst, which would be indistinguishable from saturated catalyst behavior as the $NO_x$
@@ -45,7 +45,7 @@ reduction would be independent of urea dosing.
 
 A fraction of the data from the test-cell experiments under RMC and Hot-FTP test conditions for both degreened and aged
 catalysts are found to be in saturated mode. The number of data points close to catalyst saturation $\lr{N_{sat}}$ and
-the total number of samples ($N$) for different test conditions is tabulated in Tables-\ref{tab::sat_data_perc_ssd} and
+the total number of samples ($N$) for different test conditions is tabulated in Tables~\ref{tab::sat_data_perc_ssd} and
 \ref{tab::sat_data_perc_iod}.
 %==============================================================
 \begin{table}[ht]
@@ -86,4 +86,4 @@ the total number of samples ($N$) for different test conditions is tabulated in 
 \end{table}
 Note that the higher number of data points classified as close to catalyst saturation in RMC test conditions, compared
 to Hot-FTP, results in better parameter estimates and performance of the aging detection test statistic in this case
-(Table-\ref{tab::Tw_tst}).
+(Table~\ref{tab::Tw_tst}).
