--- a/secs/5-sat_detect/3_subs/2_aging_detection.tex
+++ b/secs/5-sat_detect/3_subs/2_aging_detection.tex
@@ -4,7 +4,7 @@ concentration of viable voids on the catalyst. The adsorption site concentration
 the catalyst allowing the parameters to capture the aging of the catalyst. This is demonstrated using the test-cell
 experiments on a new (degreened) and hydro-thermally aged catalyst with the same capacity. The predicted $NO_x$
 reduction for an aged catalyst is found to be statistically lower than the predicted $NO_x$ reduction in a degreened
-catalyst (Figure-\ref{fig::aging_diff}).
+catalyst (Figure~\ref{fig::aging_diff}).
 \begin{figure}[ht]
         \centering
         \includegraphics[width=\figWidth]{./figs/5-sat_detect/3_parm_ID/AgingDiff.png}
