--- a/secs/5-sat_detect/4-truck_aging.tex
+++ b/secs/5-sat_detect/4-truck_aging.tex
@@ -2,7 +2,7 @@
 %===
 The performance of the proposed aging detector is also demonstrated using the $NO_x$ sensor data from four long-haul
 trucks. The road data were collected from trucks operating in the United States for two days separated by a few years
-(Table~\ref{tab::truck_data_mileage}) during which the catalyst has aged based on the existing performance measures. The
+(Table~\ref{tab::truck_data_mileage}) during which the catalyst has aged, based on the existing performance measures. The
 data contains measurements of $NO_x$ sensors before and after the catalyst, as well as other required variables
 including flow rate, temperature and urea injection rate. The preprocessed data are then partitioned into drive segments
 with no breaks which correspond to a continuous driving period from engine start to engine stop. Unlike the test-cell data where the engine drive-cycles are repeatable and produce a significant fraction of samples
