--- a/secs/5-sat_detect/6-detector_performance.tex
+++ b/secs/5-sat_detect/6-detector_performance.tex
@@ -1,6 +1,6 @@
 \section{Remarks on Detector Performance}
 
-The study introduces a parameter estimation-based hypothesis testing algorithm for catalyst aging detection, based on
+The study introduces a parameter-estimation-based hypothesis testing algorithm for catalyst aging detection, based on
 the hypothesis that model parameters associated with catalyst storage capacity change with aging
 \cite{daya2018development,daya2020kinetic}. The hypothesis testing framework requires not only the parameter
 estimates but also their distributions. To address this, the maximum likelihood estimation (MLE) framework and its
@@ -20,5 +20,5 @@ This improved performance can be attributed to the following factors:
         \item The saturated model contains fewer parameters than the unsaturated model, resulting in a less stringent persistence of excitation condition and reducing the risk of overfitting noise.
         \item The parameter estimation method for the saturated model is more robust to cross-sensitivity errors because it utilizes highly selective data for estimation. Only data points near saturation are employed for parameter estimation.
 \end{enumerate}
-Therefore, the saturated model parameter estimation-based detector represents a logical choice for catalyst aging
+Therefore, the saturated model parameter-estimation-based detector represents a logical choice for catalyst aging
 detection in SCR-ASC systems.
