--- a/secs/n-conclusion/0-conclusion.tex
+++ b/secs/n-conclusion/0-conclusion.tex
@@ -2,7 +2,7 @@
 
 This thesis addressed the problem of diagnosing aging in diesel-engine SCR--ASC aftertreatment systems using only
 on-board measurements that are available in long-haul trucks. The central idea was to treat aging detection as a
-parameter estimation-based hypothesis testing problem posed on a physically motivated model of $NO_x$ reduction
+parameter-estimation-based hypothesis testing problem posed on a physically motivated model of $NO_x$ reduction
 dynamics. The resulting framework is non-intrusive, robust to practical limitations such as sensor sampling and $NO_x$
 sensor cross-sensitivity, and suitable for real-time implementation on an engine control unit.
 
@@ -21,7 +21,7 @@ Figure~\ref{fig::problems_solved}.
         \label{fig::problems_solved}
 \end{figure}
 
-Building on the developed model, this study proposes a parameter estimation-based hypothesis testing algorithm for
+Building on the developed model, this study proposes a parameter-estimation-based hypothesis testing algorithm for
 catalyst aging detection, grounded in the hypothesis that parameters linked to catalyst storage capacity vary with
 aging. A Wald-test detector is derived within a maximum likelihood estimation (MLE) framework, leveraging its asymptotic
 properties. The detector's performance is demonstrated using both test-cell experiments and real-world truck data sets.
