Some more corrections

--- a/secs/2-data/2-data_units.tex
+++ b/secs/2-data/2-data_units.tex
@@ -42,7 +42,7 @@ In general the operating temperature is very high ($250 \,^\circ C \approx 500 K
 \end{align}
 %%==================
 \subsubsection{Sensitivity of density to change in $NO_x$ concentrations}
-Let $P_{NO_x}$ be the partial pressure of $NO_x$ and $P_0$ be the total pressure. Assuming the rest of the gas constituents are similar to that of air, we have the density as:
+Let $P_{NO_x}$ be the partial pressure of $NO_x$ and $P_0$ be the total pressure. Assume the rest of the gas constituents are similar to that of air. We have the density as:
 \begin{align*}
     \rho &= \frac{1}{RT} \lr{ P_{NO_x} M_{NO_x} + (P_0 - P_{NO_x}) M_{air}} = \frac{1}{RT} \lr{ P_{NO_x} \lr{M_{NO_x} - M_{air}} + P_0 M_{air}}\\
     \implies \frac{\partial \rho}{\partial P_{NO_x}} &= \frac{1}{RT} \lr{\lr{M_{NO_x} - M_{air}}}\\
