--- a/secs/4-NOx_mdl/1-subs/change_in_nox_model.tex
+++ b/secs/4-NOx_mdl/1-subs/change_in_nox_model.tex
@@ -53,7 +53,7 @@ Thus, we have the recursive equation for change in concentration due to reductio
                                 \\
                         + t_s k_{s2v} \times \lrf{\con{NH_3}^{in} \Gamma(k-1) \tau(k) u_1(k)} \times \lr{k_{scr}(k) k_{ads}(k-1)}
 \end{multline}
-Explicitly writing the individual terms:
+Explicitly writing the individual terms leads to:
 \begin{align*}
         \eta(k+1) =& \eta(k) \lrb{\frac{\tau(k)}{\tau(k-1)}}
                                 \lrb{\frac{u_1(k)}{u_1(k-1)}}
