--- a/secs/4-NOx_mdl/1-subs/ident_form.tex
+++ b/secs/4-NOx_mdl/1-subs/ident_form.tex
@@ -8,7 +8,7 @@ let
                                                 }\\
         \phi_{\Gamma r}(k) &= \lrb{ \frac{u_2(k-1)}{F(k-1)}} \phi_2(k-1)
 \end{align}
-Thus, rewriting equation (\ref{eqn::eta_parm}):
+Thus, equation (\ref{eqn::eta_parm}) yields:
 \begin{align*}
         \lrb{\frac{F(k)}{u_1(k)}} \eta(k+1) &= \eta(k) \lrb{\frac{F(k-1)}{u_1(k-1)}}
                     -  \phi^T_{\eta r}(k) \theta_{\eta}  + \phi_{\Gamma r}^T(k) \theta_{\Gamma}
