--- a/secs/4-NOx_mdl/1-subs/parametrization.tex
+++ b/secs/4-NOx_mdl/1-subs/parametrization.tex
@@ -98,7 +98,7 @@ Hence, we have the $NO_x$ dynamics:
 
 %==============
 
-$ \phi_\eta$ can be further simplified to avoid the multiplication and division of the same signals that result in noise amplification as follows:
+$ \phi_\eta$ can be further simplified to avoid the multiplication and division of the same signals, which result in noise amplification, as follows:
 
 \begin{align}
      \phi_{\eta}(k)
