Apply Peter Meckl reviewer edits (Feb 26 PDF) — batch 2
Text corrections across multiple chapters:
- secs/1-intro/subs/1-2_cstr.tex: add non-breaking space before \cite to
  prevent line break (item 9)
- secs/2-data/2-data_units.tex: "Thus, this measurement" → "for this";
  "temperature T," → "temperature $T$," (items 14, 16)
- secs/3-governing_eqns/1-reactions.tex: "through a similar mechanism" →
  "via a similar mechanism" (item 18)
- secs/3-governing_eqns/6-proc_dyn.tex: '(k)' → $(k)$ in math mode (item 23)
- secs/4-NOx_mdl/1_NOx_r_mdl.tex: "$\sigma(t+t_s)$, $\sigma(t)$" → "and";
  layout fix for Eq. (4.6) page break (items 27, 33)
- secs/4-NOx_mdl/2_catalyst_saturation.tex: "limit, is" → "limit, is given
  by"; "Writing the equation" → "Writing equation" (items 42, 45)
- secs/4-NOx_mdl/2-subs/parm_est.tex: "tabulated below" →
  Table~\ref{tab::sat_parm_est}; figure ref updated "for different drive
  cycles" (items 47, 48)
- secs/5-sat_detect/3-testcell_aging.tex: degree symbol fix ×4,
  comma additions, "estimated" → "estimates" (items 69–71)
- secs/5-sat_detect/3_subs/1_cat_mode.tex: remove "the"; "." → ":" (items 75, 76)
- secs/5-sat_detect/5-unconstrained_results.tex: "( 5.11 )" → "Table~\ref";
  "result" → "results" (items 84, 85)
- secs/5-sat_detect/6-detector_performance.tex: cite parentheses; Wald-test
  reword; "parameter estimation-based" hyphenation ×3 (items 87–89)

Tracker: phm_edits_Feb26_tracker.md updated — 73/96 items Done/N/A,
23 items pending author input

--- a/secs/1-intro/subs/1-2_cstr.tex
+++ b/secs/1-intro/subs/1-2_cstr.tex
@@ -124,7 +124,7 @@ injection that is converted to ammonia. This can be modelled by the following eq
 The four equations presented constitute the nonlinear state-space model for the SCR-ASC system under the single CSTR
 assumption. However, this model lacks parsimony and identifiability given the current measurement set. To obtain an
 identifiable model, the nonlinear system can be linearized, and lumped parameters for input-output equations can be
-derived based on the available measurements \cite{charla2024reduced}.
+derived based on the available measurements~\cite{charla2024reduced}.
 
 Furthermore, the hybrid dynamics modelled in the above equations capture the high-frequency reaction kinetics coupled
 with mass flow. The slowest process, or dominant mode, can be approximated as a first-order system with residence time
