--- a/secs/2-data/2-data_units.tex
+++ b/secs/2-data/2-data_units.tex
@@ -78,7 +78,7 @@ measurements.
     1 \, ppm^{\lr{mol}} &= \frac{1 \, mol \text{ of gas}}{10^6 \, mol \text{ of air }}
 \end{align}
 %===
-Thus, this measurement when converted into $mol/m^3$, the temperature of the gas will be essential to get the right
+Thus, for this measurement when converted into $mol/m^3$, the temperature of the gas will be essential to get the right
 value as the volume of 1 mole of air changes with temperature. Assuming ideal gas behavior,
 %===
 \begin{align}
@@ -94,7 +94,7 @@ $V_0 = 22.4 L = 22.4 \times 10^{-3} m^3$ and $T_0 = 273.15 K$.
     n_{air} &= 10^6
 \end{align*}
 %===
-Thus, volume of $10^6$ moles of air at temperature T,
+Thus, volume of $10^6$ moles of air at temperature $T$,
 %===
 \begin{align}
     V_{air} &= 10^6 \times \frac{273.15 + T}{273.15} \times 22.4 \times 10^{-3} m^3
