--- a/secs/3-governing_eqns/1-reactions.tex
+++ b/secs/3-governing_eqns/1-reactions.tex
@@ -32,7 +32,7 @@ The following lists all the reactions that take place inside the SCR-ASC chamber
                         & &[\text{NO oxidation}]
 \end{align*}
 
-Note that ammonia oxidation (AMOX) happens both on the surfaces of the SCR catalyst and the ASC catalyst through a
+Note that ammonia oxidation (AMOX) happens both on the surfaces of the SCR catalyst and the ASC catalyst via a
 similar mechanism, but the SCR catalyst favors $NO_x$ reduction while ASC is specifically designed for ammonia
 oxidation. The Eley-Rideal reaction mechanism \cite{yuan2015diesel,hsieh2011development,nova2014urea} is
 considered for interpreting the SCR reactions, where one reactant $(NO_x)$ is gaseous, and the other is adsorbed on the
