--- a/secs/3-governing_eqns/6-proc_dyn.tex
+++ b/secs/3-governing_eqns/6-proc_dyn.tex
@@ -38,7 +38,7 @@ From previous derivations, we have the complete process dynamics of SCR-ASC dyna
 
 The above four equations are the complete process dynamics of SCR-ASC dynamics with urea dosing. The above equations are
 nonlinear and coupled with implicit dependence on temperature and flow rate. In this section the above equations are
-rewritten in a parametric form with standard state-space representation. For convenience and clarity '(k)' is dropped
+rewritten in a parametric form with standard state-space representation. For convenience and clarity $(k)$ is dropped
 from the variables.
 
 Note that the tailpipe (gaseous) ammonia dynamics do not affect the $NO_x$ reduction dynamics and we do not have the
