--- a/secs/4-NOx_mdl/2-subs/parm_est.tex
+++ b/secs/4-NOx_mdl/2-subs/parm_est.tex
@@ -5,11 +5,12 @@ scr}$. Both $k_{scr/ads}$ and $\Gamma$ are assumed to be monotonic functions of 
 Thus, a linear model for the product will not capture the change in monotonicity of the product that happens at a
 particular temperature. After a systematic analysis of various polynomial orders and temperature partitions, a quadratic
 model with two partitions was found to be the best approximation with minimum prediction error. The parameter estimates
-of the saturated model are tabulated below.
+of the saturated model are tabulated in Table~\ref{tab::sat_parm_est}.
 
 \begin{table}[!ht]
         \centering
         \caption{Parameter estimates of the saturated catalyst model for the SCR-ASC system}
+        \label{tab::sat_parm_est}
         \begin{tabular}{l l c c c c}
                 \hline \hline
                 Age & Test & Temp. Zone &
@@ -42,7 +43,7 @@ of the saturated model are tabulated below.
 
 The parameter values are directionally different for aged and degreened catalysts. Their variance provides better
 discernibility of catalyst aging based on these parameter values. The responses of the saturated system to the inputs
-from the data are shown in Figures~\ref{fig::eta_bounds_cftp}, \ref{fig::eta_bounds_hftp}, and \ref{fig::eta_bounds_rmc}.
+from the data are shown in Figures~\ref{fig::eta_bounds_cftp}, \ref{fig::eta_bounds_hftp}, and \ref{fig::eta_bounds_rmc} for different drive cycles.
 
 \begin{figure}[!ht]
         \begin{minipage}{0.49\textwidth}
