--- a/secs/4-NOx_mdl/2_catalyst_saturation.tex
+++ b/secs/4-NOx_mdl/2_catalyst_saturation.tex
@@ -119,7 +119,7 @@ the system when it is always saturated.
 The upper bound of the actual change in concentration due to $NO_x$ reduction $(\eta(k))$ is the inlet concentration of $NO_x$ $(u_1(k-1))$.
 
 %===
-Writing the equation (\ref{eqn::eta_max_min}) in terms of the tailpipe $NO_x$ concentration,
+Writing equation (\ref{eqn::eta_max_min}) in terms of the tailpipe $NO_x$ concentration,
 \begin{align}
         x_1(k+1) &= \max \lrf{0, u_1(k) - \max \lrf{ 0, \min \lrf{f_{\sigma}(k), f_{\Gamma}(k)}}}
 \end{align}
