--- a/secs/5-sat_detect/3-testcell_aging.tex
+++ b/secs/5-sat_detect/3-testcell_aging.tex
@@ -6,7 +6,7 @@ Mode Cycle) and Hot-FTP (Federal Test Procedure) tests on the same catalyst, val
 the parameters vary significantly between RMC and Hot-FTP tests. This is predominantly due to the differences in the
 temperature ranges experienced by the catalyst during the tests, which affects the Arrhenius temperature dependence of
 the rate constant and the concentration of viable voids on the catalyst surface. The temperature range of the data
-considered during the RMC tests is between $240\lx{^o}{C}$ and $360\lx{^o}{C}$, while for the Hot-FTP tests it is between $200\lx{^o}{C}$ and $300\lx{^o}{C}$.
+considered during the RMC tests is between $240\,^\circ\text{C}$ and $360\,^\circ\text{C}$, while for the Hot-FTP tests it is between $200\,^\circ\text{C}$ and $300\,^\circ\text{C}$.
 \begin{table}[ht]
         \centering
         \caption{Parameter Estimates using FTIR Data}
