--- a/secs/5-sat_detect/3_subs/1_cat_mode.tex
+++ b/secs/5-sat_detect/3_subs/1_cat_mode.tex
@@ -2,7 +2,7 @@
 The saturated catalyst model's response is not dependent on the previous state but only on the inputs, making the
 response independent of the initial conditions. Thus, using the parameter estimates, a given data point can be
 classified as saturated catalyst response if the prediction error for the same inputs (inlet $NO_x$, $u_1$, and
-mass flow rate, $F$) is less than the $\epsilon_{sat}$.
+mass flow rate, $F$) is less than $\epsilon_{sat}$:
 \begin{align}
         \abs{\hat \eta_{sat}(k) - \eta(k)} \leq \epsilon_{sat} \implies \text{Catalyst Saturation} \label{eqn::sat_cond}
 \end{align}
