--- a/secs/5-sat_detect/5-unconstrained_results.tex
+++ b/secs/5-sat_detect/5-unconstrained_results.tex
@@ -40,12 +40,12 @@ structure error in this case is assumed to be Gaussian with zero mean making the
 maximum-likelihood parameter estimation problem.
 
 The performance of the above Wald test for aging detection using the unsaturated catalyst model is evaluated using the
-test cell data (\ref{tab::wald_unsat_testcell}). The test statistic, $T_w$, is computed for each test and compared
+test cell data (Table~\ref{tab::wald_unsat_testcell}). The test statistic, $T_w$, is computed for each test and compared
 against a threshold, $\beta$, to determine if the test correctly identifies the aged catalyst. The results show that the
 test statistic for the aged catalyst is significantly higher than that of the degreened catalyst, indicating that the
 test can effectively distinguish between aged and degreened catalysts even in the presence of $NO_x$ sensor
 cross-sensitivity. One of the reasons for this performance is the predictable nature of the test-cell drive cycles,
-which result in similar time responses of the cross-sensitivity error across different cycles of the same test.
+which results in similar time responses of the cross-sensitivity error across different cycles of the same test.
 
 \begin{table}[!ht]
 \caption{Wald test with nuisance parameters on Hot-FTP and RMC test cell data}
